--- a/user/css/style.css
+++ b/user/css/style.css
@@ -1,8 +1,3 @@
-.bloodIcon {
-    width: inherit;
-    height: 28px;
-}
-
 #resetBtn {
     float: right;
 }
@@ -48,4 +43,9 @@ u {
 
 #saveBtn {
     padding-top: 5%;
+}
+
+#changePassword {
+    width: 50%;
+    margin-top: 2%;
 }
