--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,18 @@
     padding-bottom: 10%;
 }
 
+.nav-extended {
+    display: flex;
+}
+
+#navWidth {
+    width: 100%;
+}
+
+.brand-logo {
+    padding-left: 100px;
+}
+
 #slides {
     position: relative;
     height: 300px;
@@ -67,18 +79,28 @@ main {
     margin-left: 10%;
 }
 
-#aboutUs {
-    margin: 3%;
-    margin-left: 10%;
+.aboutUsContent {
     width: 50%;
+    margin-left: 10%;
+    margin-top: 3%;
+}
+
+#aboutUs {
+    display: flex;
+}
+
+#aboutUsImg {
+    width: 400px;
+    height: 400px;
 }
 
 iframe {
     float: right;
 }
 
-#modal1 {
-    width: 40%;
+.modal {
+    width: 31%;
+    max-height: 74%;
     background-color: #E9E9E9;
     overflow-y: hidden;
 }
@@ -102,7 +124,7 @@ span#modalFoot {
 }
 
 #faqColor {
-    background-color: #8064A2;
+    background-color: #E73D43;
 }
 
 .iconColor {
