--- a/css/style.css
+++ b/css/style.css
@@ -2,67 +2,37 @@
     display: flex;
 }
 
-#navWidth {
-    width: 100%;
-    margin-left: 3%;
-}
-
-#navLogo {
-    margin: 0.5%;
-}
-
 .brand-logo {
     padding-left: 22px !important;
-}
-
-#mySlider {
-    margin-top: 1%;
-    width: 90%;
-    margin-left: 5%;
 }
 
 .indicator-item.active {
     background-color: #FF000D !important;
 }
 
-#homeContent {
-    display: flex;
-}
-
-.homeWidth {
-    width: 33.3%;
-    height: 70%;
-    border: 4px solid #F29599;
-    border-radius: 10px;
-    margin-top: 1%;
-    margin-bottom: 1%;
-}
-
-.bloodDonor {
-    margin-left: 1%;
-}
-
-.inspStories {
-    margin-left: .5%;
-    margin-right: .5%;
-}
-
-.upActivities {
-    margin-right: 1%;
-}
-
-.logoWatermark {
-    background: url("../images/250x250.png");
-    height: 400px;
-    background-repeat: no-repeat;
-    background-position: center;
-    font-weight: 800;
+.activity-head {
+    background: #C68166;
+    font-size: 1.5em;
+    color: white;
 }
 
 body {
     display: flex;
     min-height: 100vh;
     flex-direction: column;
+    background-color: #FDF7E1;
+}
+
+.donor-head {
+    background: #D8BB7F;
+    font-size: 1.5em;
+    color: white;
+}
+
+.story-head {
+    background: #F7E8A0;
+    font-size: 1.5em;
+    color: white;
 }
 
 main {
@@ -76,11 +46,6 @@ main {
 
 #feedbackBtn {
     margin-left: 8%;
-}
-
-#inquiry {
-    width: 50%;
-    margin-top: 2%;
 }
 
 #inquiryBtn {
@@ -111,14 +76,6 @@ iframe {
     float: right;
 }
 
-.modal {
-    width: 31%;
-    max-height: 70%;
-    overflow-y: hidden;
-    background-color: #E9E9E9;
-    color: #000;
-}
-
 #userProfile {
     border-radius: 100%;
     width: 150px;
@@ -145,14 +102,130 @@ span a {
 
 /*For Desktop*/
 
-@media screen and (min-width: 769px) {}
+@media screen and (min-width: 769px) {
+    #navWidth {
+        width: 100%;
+        margin-left: 3%;
+    }
+    #homeContent {
+        display: flex;
+    }
+    .slider-width {
+        display: flex;
+    }
+    #mySlider {
+        margin-top: 1%;
+        width: 70%;
+        margin-left: 3%;
+    }
+    .story-content {
+        margin-left: 3%;
+        width: 50%;
+        height: 40%;
+        border: 4px solid #F9EEB9;
+        border-radius: 10px;
+        margin-top: 1%;
+        margin-bottom: 1%;
+    }
+    .donor-content {
+        margin-left: 2%;
+        margin-right: 3%;
+        width: 50%;
+        height: 40%;
+        border: 4px solid #E9D9B9;
+        border-radius: 10px;
+        margin-top: 1%;
+        margin-bottom: 1%;
+    }
+    .activity-content {
+        margin: 1%;
+        border: 4px solid #DEB7A7;
+        border-radius: 10px;
+        height: 60%;
+        width: 30%;
+        margin-right: 3%;
+    }
+    .modal {
+        width: 31%;
+        max-height: 70%;
+        overflow-y: hidden;
+        background-color: #E9E9E9;
+        color: #000;
+    }
+    #inquiry {
+        width: 50%;
+        margin-top: 2%;
+    }
+    .faq-dimensions {
+        margin-left: 15%;
+        margin-right: 15%;
+    }
+}
 
 
 /*For Tablet*/
 
-@media screen and (min-device-width: 481px) and (max-device-width: 768px) {}
+@media screen and (min-device-width: 481px) and (max-device-width: 768px) {
+    #navWidth {
+        width: 15%;
+        margin-left: 3%;
+    }
+    .story-content {
+        margin-left: 2%;
+        width: 100%;
+        height: 40%;
+        border: 4px solid #F9EEB9;
+        border-radius: 10px;
+        margin-top: 1%;
+        margin-bottom: 1%;
+    }
+    .donor-content {
+        margin-left: 2%;
+        margin-right: 2%;
+        width: 100%;
+        height: 40%;
+        border: 4px solid #E9D9B9;
+        border-radius: 10px;
+        margin-top: 1%;
+        margin-bottom: 1%;
+    }
+    .activity-content {
+        margin: 1%;
+        border: 4px solid #DEB7A7;
+        border-radius: 10px;
+        height: 60%;
+        width: 100%;
+        margin-right: 3%;
+    }
+}
 
 
 /*For Mobile*/
 
-@media only screen and (max-device-width: 480px) {}
+@media only screen and (max-device-width: 480px) {
+    #navWidth {
+        width: 15%;
+        margin-left: 3%;
+    }
+    .story-content {
+        border: 4px solid #F9EEB9;
+        border-radius: 10px;
+    }
+    .donor-content {
+        border: 4px solid #E9D9B9;
+        border-radius: 10px;
+    }
+    .activity-content {
+        border: 4px solid #DEB7A7;
+        border-radius: 10px;
+    }
+    .story-content,
+    .donor-content,
+    .activity-content {
+        width: 98%;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 4%;
+        height: 50%;
+    }
+}
