--- a/user/css/style.css
+++ b/user/css/style.css
@@ -20,6 +20,10 @@
     width: 150px !important;
 }
 
+body {
+    background-color: #FDF7E1;
+}
+
 @media screen and (min-width: 769px) {
     main {
         margin-left: 30%;
@@ -37,6 +41,9 @@
     }
     .table-width {
         width: 70%;
+    }
+    .hide1 {
+        display: none;
     }
 }
 
