--- a/admin/css/style.css
+++ b/admin/css/style.css
@@ -49,6 +49,10 @@ body {
     .hide1 {
         display: none;
     }
+    .largeTable {
+        margin-left: 25%;
+        margin-right: 5%;
+    }
 }
 
 @media screen and (min-device-width: 481px) and (max-device-width: 768px) {
