--- a/user/css/style.css
+++ b/user/css/style.css
@@ -24,15 +24,15 @@ body {
     background-color: #FDF7E1;
 }
 
-@media screen and (min-width: 769px) {
+
+/*For Desktop*/
+
+@media screen and (min-width: 993px) {
     main {
-        margin-left: 30%;
+        margin-left: 340px;
     }
     .navWidth {
-        padding-left: 15%;
-    }
-    #imgAlign {
-        margin-left: 10%;
+        padding-left: 340px;
     }
     #mainContent {
         width: 50%;
@@ -47,7 +47,7 @@ body {
     }
 }
 
-@media screen and (min-device-width: 481px) and (max-device-width: 768px) {
+@media screen and (min-device-width: 481px) and (max-device-width: 992px) {
     main {
         margin-left: 15%;
     }
