--- a/user/css/style.css
+++ b/user/css/style.css
@@ -12,6 +12,11 @@
     display: block;
 }
 
+.reg-dimension {
+    width: 90%;
+    margin-left: 0% !important;
+}
+
 .inputHeight {
     height: 2rem !important;
 }
@@ -45,7 +50,34 @@ body {
     .hide1 {
         display: none;
     }
+    .dash-border {
+        width: 30%;
+        height: 30%;
+        margin: 3%;
+        text-align: center;
+        background: #84DCCF;
+        color: #ffffff;
+    }
+    .dashBoardHead {
+        font-size: 1.7em;
+    }
+    .dashBoardValue {
+        font-size: 6em;
+    }
+    .dashboard-desktop {
+        display: flex;
+    }
+    .dashboard-mobile {
+        display: none;
+    }
+    .largeTable {
+        margin-left: 320px;
+        margin-right: 20px;
+    }
 }
+
+
+/* For Tablet */
 
 @media screen and (min-device-width: 481px) and (max-device-width: 992px) {
     main {
@@ -56,9 +88,32 @@ body {
     }
 }
 
+
+/* For Mobile */
+
 @media only screen and (max-device-width: 480px) {
     main {
         margin-left: 2%;
+    }
+    .dashboard-desktop {
+        display: none;
+    }
+    .dashboard-mobile {
+        display: flex;
+    }
+    .dash-border {
+        height: 200px;
+        max-width: 200px;
+        width: 50%;
+        margin: auto;
+        text-align: center;
+    }
+    .dashBoardHead {
+        font-size: 1.7em;
+        height: 50px;
+    }
+    .dashBoardValue {
+        font-size: 4em;
     }
 }
 
