--- a/bloodbank/WebRoot/admin/css/style.css
+++ b/bloodbank/WebRoot/admin/css/style.css
@@ -39,10 +39,14 @@ body {
         margin-top: 2%;
         margin-left: 0% !important;
     }
-    .reg-dimension {
-        width: 90%;
-        margin-left: 0% !important;
+    .reg-dimension1 {
+        width: 70%;
+        margin-left: auto;
+        margin-right:auto;
     }
+    .reg-dimension{
+    width:90%;
+    margin:0% !important;}
     .table-width {
         width: 70%;
     }
@@ -121,10 +125,6 @@ body {
     margin-left: 10%;
 }
 
-.bloodIcon {
-    width: inherit;
-    height: 28px;
-}
 
 .modal {
     width: 31%;
