--- a/bloodbank/WebRoot/user/css/style.css
+++ b/bloodbank/WebRoot/user/css/style.css
@@ -72,6 +72,16 @@ body {
         margin-top: 2%;
         margin-left: 0% !important;
     }
+    .reg-dimension1 {
+        width: 70%;
+        margin-left: auto;
+        margin-right:auto;
+    }
+    .reg-dimension{
+    width:90%;
+    margin:0% !important;
+    }
+    
     .table-width {
         width: 70%;
     }
